--- a/Quantum-Physics-I/Problem-Set-1.ipynb
+++ b/Quantum-Physics-I/Problem-Set-1.ipynb
@@ -1189,7 +1189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "E, l, freq = sympy.symbols('E, lambda, nu')"
+    "E_photon, l, freq = sympy.symbols('E_gamma, lambda, nu')"
    ]
   },
   {
@@ -1199,7 +1199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wave_energy = (E, units.planck * freq)\n",
+    "wave_energy = (E_photon, units.planck * freq)\n",
     "sympy.Eq(*wave_energy)"
    ]
   },
@@ -1226,7 +1226,7 @@
     "        wave_energy, \n",
     "        wave_speed\n",
     "    ]), \n",
-    "    (E, freq), \n",
+    "    (E_photon, freq), \n",
     "    dict=True\n",
     ")\n",
     "sol"
@@ -1252,7 +1252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for var in [E,freq]:\n",
+    "for var in [E_photon,freq]:\n",
     "    print(var, sorted([\n",
     "        to_SI(sol[0][var].subs(val))\n",
     "        for val in vals\n",
@@ -1275,7 +1275,7 @@
    "outputs": [],
    "source": [
     "P, f_emission = sympy.symbols('P, f_emission')\n",
-    "photon_power = (P, E * f_emission)\n",
+    "photon_power = (P, E_photon * f_emission)\n",
     "sympy.Eq(*photon_power)"
    ]
   },
@@ -1313,7 +1313,7 @@
     "        wave_energy, \n",
     "        photon_power\n",
     "    ]), \n",
-    "    (E, f_emission), \n",
+    "    (E_photon, f_emission), \n",
     "    dict=True\n",
     ")\n",
     "sol"
@@ -1363,7 +1363,7 @@
     "        photon_power,\n",
     "        wave_speed\n",
     "    ]), \n",
-    "    (E, f_emission, freq), \n",
+    "    (E_photon, f_emission, freq), \n",
     "    dict=True\n",
     ")\n",
     "sol"
@@ -1412,7 +1412,7 @@
     "        wave_energy, \n",
     "        photon_power\n",
     "    ]), \n",
-    "    (E, f_emission), \n",
+    "    (E_photon, f_emission), \n",
     "    dict=True\n",
     ")\n",
     "sol"
@@ -1429,9 +1429,448 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "91ee0fed",
+   "metadata": {},
+   "source": [
+    "### Part iii"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121d0aa5",
+   "id": "f9960faf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rho, V, m = sympy.symbols('rho, V, m')\n",
+    "E, n = sympy.symbols('E, n')\n",
+    "C_P, T = sympy.symbols('C_P, T')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff0d01d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E_total = (E, E_photon * n)\n",
+    "sympy.Eq(*E_total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1291bbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "density = (rho, m/V)\n",
+    "sympy.Eq(*density)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "230c10e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heat_capacity = (E, C_P*m*T)\n",
+    "sympy.Eq(*heat_capacity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b56faa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = sympy.solve(\n",
+    "    map(lambda x: sympy.Eq(*x), [\n",
+    "        wave_energy, \n",
+    "        E_total,\n",
+    "        density, \n",
+    "        heat_capacity\n",
+    "    ]), \n",
+    "    (n, E_photon, E, m), \n",
+    "    dict=True\n",
+    ")\n",
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b14a3ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals = {\n",
+    "    rho: 1 * units.gram / units.milliliter,\n",
+    "    C_P: 4.18 * 10**7 * erg / (units.gram * units.kelvin),\n",
+    "    \n",
+    "    freq: 2.5 * units.giga * units.Hz,\n",
+    "    T: 10 * units.kelvin,\n",
+    "    V: 200 * units.milliliter,\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3961f988",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_SI(sol[0][n].subs(vals))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e42c112",
+   "metadata": {},
+   "source": [
+    "### Part iv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e9e5060",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# source: https://en.wikipedia.org/wiki/Electromagnetic_spectrum\n",
+    "radio_vals = {\n",
+    "    freq: 300 * units.mega * units.Hz\n",
+    "}\n",
+    "Xray_vals = {\n",
+    "    freq: 30 * units.peta * units.Hz\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9683a39a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_SI(wave_energy[1].subs(radio_vals))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "582ca94f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_SI(wave_energy[1].subs(Xray_vals))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb44abf3",
+   "metadata": {},
+   "source": [
+    "### Part B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da4f8b6c",
+   "metadata": {},
+   "source": [
+    "### Part i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35b04ef8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m, v, p, l = sympy.symbols('m, v, p, lambda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ee4c941",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "momentum = (p, m * v)\n",
+    "sympy.Eq(*momentum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2534ced",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deBroglie = (l, units.planck / p)\n",
+    "sympy.Eq(*deBroglie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdf952cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = sympy.solve(\n",
+    "    map(lambda x: sympy.Eq(*x), [\n",
+    "        deBroglie, \n",
+    "        momentum\n",
+    "    ]), \n",
+    "    (l, p), \n",
+    "    dict=True\n",
+    ")\n",
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb091c76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals = {\n",
+    "    m: 2 * units.metric_ton,\n",
+    "    v: 50 * units.miles / units.hour\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "155219de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_SI(sol[0][l].subs(vals))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67ce964f",
+   "metadata": {},
+   "source": [
+    "### Part ii"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92e2b94a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals = {\n",
+    "    m: 10 * units.gram,\n",
+    "    v: 10 * units.centimeter / units.second\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8c6ff71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_SI(sol[0][l].subs(vals))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b036f17b",
+   "metadata": {},
+   "source": [
+    "### Part iii"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "143df359",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d, r, V, rho = sympy.symbols('d, r, V, rho')\n",
+    "E_K, T, k_B  = sympy.symbols('E_K, T, k_B')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1635f389",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diameter = (d, 2*r)\n",
+    "sympy.Eq(*diameter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ba4778d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sphere_volume = (V, 4 * sympy.pi * r**3 /3)\n",
+    "sympy.Eq(*sphere_volume)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0f97eec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "density = (rho, m/V)\n",
+    "sympy.Eq(*density)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f28f6714",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thermal_energy = (E_K, 3* k_B * T / 2)\n",
+    "sympy.Eq(*thermal_energy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3209f3eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kinetic_energy = (E_K, m * v**2 /2)\n",
+    "sympy.Eq(*kinetic_energy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc3e366f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = sympy.solve(\n",
+    "    map(lambda x: sympy.Eq(*x), [\n",
+    "        diameter,\n",
+    "        sphere_volume, \n",
+    "        density,\n",
+    "        thermal_energy,\n",
+    "        kinetic_energy,\n",
+    "        momentum,\n",
+    "        deBroglie,\n",
+    "    ]), \n",
+    "    (r, V, m, E_K, v, p, l), \n",
+    "    dict=True\n",
+    ")\n",
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58d24a47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals = {\n",
+    "    d: 10**-5 * units.centimeter,\n",
+    "    rho: 0.2 * units.gram / units.centimeter**3,\n",
+    "    T: 300 * units.kelvin,\n",
+    "    k_B: units.boltzmann\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d827f9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_SI(sol[-1][l].subs(vals))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90532877",
+   "metadata": {},
+   "source": [
+    "### Part iv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f7c1a58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = sympy.solve(\n",
+    "    map(lambda x: sympy.Eq(*x), [\n",
+    "        thermal_energy,\n",
+    "        kinetic_energy,\n",
+    "        momentum,\n",
+    "        deBroglie,\n",
+    "    ]), \n",
+    "    (E_K, v, p, l), \n",
+    "    dict=True\n",
+    ")\n",
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be8b481c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals = {\n",
+    "    m: 87 * units.atomic_mass_constant,\n",
+    "    T: 100 * units.micro * units.kelvin,\n",
+    "    k_B: units.boltzmann\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92849b56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_SI(sol[-1][l].subs(vals))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42627a2f",
    "metadata": {},
    "outputs": [],
    "source": []
