Added solution to problem 4

--- a/Quantum-Physics-I/Problem-Set-1.ipynb
+++ b/Quantum-Physics-I/Problem-Set-1.ipynb
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91ee0fed",
+   "id": "c7baa157",
    "metadata": {},
    "source": [
     "### Part iii"
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9960faf",
+   "id": "5b5fcdfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff0d01d9",
+   "id": "bc1a0096",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1462,7 +1462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1291bbb",
+   "id": "2c90e542",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "230c10e8",
+   "id": "892f2bae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1484,7 +1484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b56faa7",
+   "id": "b238437e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1504,7 +1504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b14a3ce",
+   "id": "4e466e02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1522,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3961f988",
+   "id": "17cb7c0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e42c112",
+   "id": "3c5f8817",
    "metadata": {},
    "source": [
     "### Part iv"
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e9e5060",
+   "id": "641b8339",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1556,7 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9683a39a",
+   "id": "f0bf70c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "582ca94f",
+   "id": "e9ef2d54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1575,7 +1575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb44abf3",
+   "id": "2ba44fdb",
    "metadata": {},
    "source": [
     "### Part B"
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da4f8b6c",
+   "id": "6527871b",
    "metadata": {},
    "source": [
     "### Part i"
@@ -1592,7 +1592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35b04ef8",
+   "id": "9ee68b7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1602,7 +1602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ee4c941",
+   "id": "156327b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,7 +1613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2534ced",
+   "id": "7e8c81ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdf952cc",
+   "id": "cb506036",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1642,7 +1642,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb091c76",
+   "id": "5daeb2bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympy.Eq(l, sol[0][l])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29dff5ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1655,16 +1665,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "155219de",
+   "id": "e1fb55aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_SI(sol[0][l].subs(vals))"
+    "sympy.Eq(l, to_SI(sol[0][l].subs(vals)))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "67ce964f",
+   "id": "51142035",
    "metadata": {},
    "source": [
     "### Part ii"
@@ -1673,7 +1683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92e2b94a",
+   "id": "02c9da5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1686,16 +1696,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8c6ff71",
+   "id": "8ff403e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_SI(sol[0][l].subs(vals))"
+    "sympy.Eq(l, to_SI(sol[0][l].subs(vals)))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b036f17b",
+   "id": "42855555",
    "metadata": {},
    "source": [
     "### Part iii"
@@ -1704,7 +1714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "143df359",
+   "id": "2f7e0028",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1715,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1635f389",
+   "id": "c085a85b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1726,7 +1736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ba4778d",
+   "id": "68d7721c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,7 +1747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0f97eec",
+   "id": "9cd0775e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1748,7 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f28f6714",
+   "id": "a5122150",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1759,7 +1769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3209f3eb",
+   "id": "d36b1e3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1770,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc3e366f",
+   "id": "86bbf800",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1793,7 +1803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58d24a47",
+   "id": "5e9ad1b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1808,16 +1818,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d827f9e",
+   "id": "2d89cf22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_SI(sol[-1][l].subs(vals))"
+    "sympy.Eq(l, to_SI(sol[-1][l].subs(vals)))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "90532877",
+   "id": "ce125fe2",
    "metadata": {},
    "source": [
     "### Part iv"
@@ -1826,7 +1836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f7c1a58",
+   "id": "e8ab523e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1846,7 +1856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be8b481c",
+   "id": "912447ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1860,17 +1870,311 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92849b56",
+   "id": "a6d27647",
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_SI(sol[-1][l].subs(vals))"
+    "sympy.Eq(l, to_SI(sol[-1][l].subs(vals)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04b91cab",
+   "metadata": {},
+   "source": [
+    "## Problem 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a06e1d0f",
+   "metadata": {},
+   "source": [
+    "### Part A"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42627a2f",
+   "id": "a59e0f94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p, l = sympy.symbols('p, lambda')\n",
+    "d, D, w = sympy.symbols('d, D, w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef54d6b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deBroglie = (l, units.planck / p)\n",
+    "sympy.Eq(*deBroglie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95f79456",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fringe_distance = (w * d / D, l)\n",
+    "sympy.Eq(*fringe_distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce816cdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = sympy.solve(\n",
+    "    map(lambda x: sympy.Eq(*x), [\n",
+    "        deBroglie,\n",
+    "        fringe_distance\n",
+    "    ]), \n",
+    "    (w, l), \n",
+    "    dict=True\n",
+    ")\n",
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ae7cc48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympy.Eq(w, sol[0][w])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfa90e8f",
+   "metadata": {},
+   "source": [
+    "### Part ii"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f3d36c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m, v, E = sympy.symbols('m, v, E')\n",
+    "V, q = sympy.symbols('V, q')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7ad65ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "momentum = (p, m * v)\n",
+    "sympy.Eq(*momentum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cbe6484",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kinetic_energy = (E, m * v**2 /2)\n",
+    "sympy.Eq(*kinetic_energy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7458ac9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "electric_potential = (E, q*V)\n",
+    "sympy.Eq(*electric_potential)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac4b1b78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = sympy.solve(\n",
+    "    map(lambda x: sympy.Eq(*x), [\n",
+    "        electric_potential,\n",
+    "        kinetic_energy,\n",
+    "        momentum,\n",
+    "        deBroglie,\n",
+    "        fringe_distance\n",
+    "    ]), \n",
+    "    (w, l, p, v, E), \n",
+    "    dict=True\n",
+    ")\n",
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73909a75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympy.Eq(w, sol[-1][w])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63e2d917",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals = {\n",
+    "    V: 50 * units.kilo * units.volt,\n",
+    "    d: 2 * 10**-4 * units.centimeters,\n",
+    "    D: 35 * units.centimeters,\n",
+    "    \n",
+    "    m: units.electron_rest_mass,\n",
+    "    q: units.elementary_charge\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e71ef269",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympy.Eq(l, to_SI(sol[-1][l].subs(vals)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81089659",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympy.Eq(w, to_SI(sol[-1][w].subs(vals)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9be34a91",
+   "metadata": {},
+   "source": [
+    "### Part iii"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee4db03b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l_val = to_SI(sol[-1][l].subs(vals))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47fa121d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l_gamma, d_gamma, D_gamma, w_gamma = sympy.symbols('lambda_gamma, d_gamma, D_gamma, w_gamma')\n",
+    "alpha = sympy.symbols('alpha')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da9c04f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l_scale = (alpha, l / l_gamma)\n",
+    "d_scale = (alpha, d / d_gamma)\n",
+    "D_scale = (alpha, D / D_gamma)\n",
+    "w_scale = (alpha, w / w_gamma)\n",
+    "sympy.Eq(*l_scale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9313108f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gamma_vals = [\n",
+    "    {\n",
+    "        l_gamma: 750 * units.nanometers,\n",
+    "        l: l_val\n",
+    "    },\n",
+    "    {\n",
+    "        l_gamma: 380 * units.nanometers,\n",
+    "        l: l_val\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63df4768",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = sympy.solve(\n",
+    "    map(lambda x: sympy.Eq(*x), [\n",
+    "        fringe_distance,\n",
+    "        l_scale,\n",
+    "        d_scale,\n",
+    "        D_scale,\n",
+    "        w_scale\n",
+    "    ]), \n",
+    "    (w, alpha, d_gamma, D_gamma, w_gamma), \n",
+    "    dict=True\n",
+    ")\n",
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfe96c87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for var in [d_gamma, D_gamma, w_gamma]:\n",
+    "    print(var, [\n",
+    "        to_SI(sol[0][var].subs(val).subs(vals))\n",
+    "        for val in gamma_vals\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3843942e",
    "metadata": {},
    "outputs": [],
    "source": []
