Added solution to problem 5

--- a/Quantum-Physics-I/Problem-Set-1.ipynb
+++ b/Quantum-Physics-I/Problem-Set-1.ipynb
@@ -2172,9 +2172,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f90edf00",
+   "metadata": {},
+   "source": [
+    "## Problem 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff5ddd2c",
+   "metadata": {},
+   "source": [
+    "### Part C"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3843942e",
+   "id": "88e3f512",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l, d, n, theta = sympy.symbols('lambda, d, n, theta')\n",
+    "m, v, p, E = sympy.symbols('m, v, p, E')\n",
+    "V, q = sympy.symbols('V, q')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "545b01c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Bragg = (n*l, 2*d*sympy.sin(theta))\n",
+    "sympy.Eq(*Bragg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "031f3be4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deBroglie = (l, units.planck / p)\n",
+    "sympy.Eq(*deBroglie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fe92d22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "momentum = (p, m * v)\n",
+    "sympy.Eq(*momentum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99253381",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kinetic_energy = (E, m * v**2 /2)\n",
+    "sympy.Eq(*kinetic_energy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7af8f312",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "electric_potential = (E, q*V)\n",
+    "sympy.Eq(*electric_potential)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e6c9e7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = sympy.solve(\n",
+    "    map(lambda x: sympy.Eq(*x), [\n",
+    "        Bragg,\n",
+    "        deBroglie,\n",
+    "        momentum,\n",
+    "        kinetic_energy,\n",
+    "        electric_potential\n",
+    "    ]), \n",
+    "    (d, l, p, v, E), \n",
+    "    dict=True\n",
+    ")\n",
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0bf0de7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympy.Eq(d, sol[-1][d])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0378133b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals = {\n",
+    "    n: 2,\n",
+    "    V: 54 * units.volt,\n",
+    "    theta: 50 * 2 * sympy.pi / 360,\n",
+    "    \n",
+    "    q: units.elementary_charge,\n",
+    "    m: units.electron_rest_mass\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "179dac5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympy.Eq(d, to_SI(sol[-1][d].subs(vals)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d282c48b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_SI(sol[-1][d].subs(vals) / (0.215 * units.nanometer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b54f66c",
    "metadata": {},
    "outputs": [],
    "source": []
