Added solution to problem 6

--- a/Quantum-Physics-I/Problem-Set-1.ipynb
+++ b/Quantum-Physics-I/Problem-Set-1.ipynb
@@ -823,7 +823,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dx, dp = sympy.symbols('\\Delta_x \\Delta_p')"
+    "dx, dp = sympy.symbols('Delta_x Delta_p')"
    ]
   },
   {
@@ -2173,7 +2173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f90edf00",
+   "id": "fd17bdbe",
    "metadata": {},
    "source": [
     "## Problem 5"
@@ -2181,7 +2181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff5ddd2c",
+   "id": "5f81768c",
    "metadata": {},
    "source": [
     "### Part C"
@@ -2190,7 +2190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88e3f512",
+   "id": "d0de9e93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2200,20 +2200,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "545b01c2",
+   "cell_type": "markdown",
+   "id": "0d31102d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Bragg = (n*l, 2*d*sympy.sin(theta))\n",
-    "sympy.Eq(*Bragg)"
+    "We need to modify the Bragg relation, since we aren't looking at a wave glancing off the lattice, but bouncing off at an angle after normal incidence."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "031f3be4",
+   "id": "542254d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Bragg_direct = (n*l, d*sympy.sin(theta))\n",
+    "sympy.Eq(*Bragg_direct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2b3e149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2224,7 +2232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fe92d22",
+   "id": "6a2aa9e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2235,7 +2243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99253381",
+   "id": "78c30c7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2246,7 +2254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7af8f312",
+   "id": "78aebcbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2257,13 +2265,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e6c9e7c",
+   "id": "77ea3e36",
    "metadata": {},
    "outputs": [],
    "source": [
     "sol = sympy.solve(\n",
     "    map(lambda x: sympy.Eq(*x), [\n",
-    "        Bragg,\n",
+    "        Bragg_direct,\n",
     "        deBroglie,\n",
     "        momentum,\n",
     "        kinetic_energy,\n",
@@ -2278,7 +2286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0bf0de7",
+   "id": "2d5ddd2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2288,12 +2296,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0378133b",
+   "id": "e8d25693",
    "metadata": {},
    "outputs": [],
    "source": [
     "vals = {\n",
-    "    n: 2,\n",
+    "    n: 1,\n",
     "    V: 54 * units.volt,\n",
     "    theta: 50 * 2 * sympy.pi / 360,\n",
     "    \n",
@@ -2305,7 +2313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "179dac5c",
+   "id": "707fbc36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2315,7 +2323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d282c48b",
+   "id": "2d995597",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2323,9 +2331,194 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1812ef9",
+   "metadata": {},
+   "source": [
+    "## Problem 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4fd6b25",
+   "metadata": {},
+   "source": [
+    "### Part A"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b54f66c",
+   "id": "1e28b00a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l, d, D, w = sympy.symbols('lambda, delta_x, D, w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aec12bac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fringe_distance = (w * d / D, l)\n",
+    "sympy.Eq(*fringe_distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e00cb7ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = sympy.solve(\n",
+    "    map(lambda x: sympy.Eq(*x), [\n",
+    "        fringe_distance\n",
+    "    ]), \n",
+    "    (w,), \n",
+    "    dict=True\n",
+    ")\n",
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97c79695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympy.Eq(w, sol[0][w])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ada5e492",
+   "metadata": {},
+   "source": [
+    "### Part B\n",
+    "\n",
+    "I'm not sure how to show this with sympy/algebra: seems more a geometric argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bc03cbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p, dp = sympy.symbols('p, delta_p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1ce1513",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slit_momentum_uncertainty = (dp,  w / D * p)\n",
+    "sympy.Eq(*slit_momentum_uncertainty)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80c689a5",
+   "metadata": {},
+   "source": [
+    "### Part C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7694d554",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E = sympy.symbols('E')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e1bd112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E_photon = (E, units.planck * units.speed_of_light / l)\n",
+    "sympy.Eq(*E_photon)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70e0c5ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "photon_momentum = (E, p*units.speed_of_light)\n",
+    "sympy.Eq(*photon_momentum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e09ec091",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = sympy.solve(\n",
+    "    map(lambda x: sympy.Eq(*x), [\n",
+    "        slit_momentum_uncertainty,\n",
+    "        photon_momentum,\n",
+    "        E_photon,\n",
+    "        fringe_distance\n",
+    "    ]), \n",
+    "    (dp, p, E, d), \n",
+    "    dict=True\n",
+    ")\n",
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8716d7a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympy.Eq(d, sol[0][d])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c1e6b03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympy.Eq(dp, sol[0][dp])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20d59f71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympy.Eq(d * dp, sympy.simplify(sol[0][d] * sol[0][dp]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96ebfb39",
    "metadata": {},
    "outputs": [],
    "source": []
